add markdown editor and preview
